--- a/.github/workflows/bisect.yml
+++ b/.github/workflows/bisect.yml
@@ -12,7 +12,6 @@ jobs:
         with:
           repository: mysql/mysql-server
           path: mysql-server
-          ref: mysql-8.0.32
-          # fetch-depth: 0
+          fetch-depth: 0
       - run: .\setup.ps1
       - run: .\bisect.ps1
