--- a/.github/workflows/bisect.yml
+++ b/.github/workflows/bisect.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+      - uses: mxschmitt/action-tmate@v3
       - name: checkout mysql-server
         uses: actions/checkout@v4
         with:
